# goldbergs-variations

./: README-ASSETS.md  README.md  index.html  package.json  vite.config.js
assets/: howler-B0mTDG0P.js  howler-BiO-FJeq.js  howler-BtLNvxT2.js  howler-BuaxAFm4.js  howler-CdI8nxHH.js  howler-DPtra215.js  howler-LftbGxxk.js  index-AUzzfROA.js  index-B1-fikPV.css  index-BbSF9zZY.js  index-DS-tYIFX.js  index-DwYc9s6r.js  index-LAHlFwl2.js  index-vBPwRcMf.js  index-z91IAPsH.js
data/: character_platform_graph.data.json
public/data/: database.data.json  final_spatialized_graph.data copy.json  final_spatialized_graph.data.json  final_spatialized_graph.data.json.backup  interview.srt  spatialized_graph.data.json  spatialized_nodes_and_links-old2.data.json
public/ref-geek/: svg (1).rar  svg (2).rar  svg (3).rar  svg.rar
public/ref-geek/DXF (1)/: 1.dxf  10.dxf  11.dxf  12.dxf  13.dxf  14.dxf  15.dxf  16.dxf  17.dxf  18.dxf  19.dxf  2.dxf  20.dxf  3.dxf  4.dxf  5.dxf  6.dxf  7.dxf  8.dxf  9.dxf
r3f-doc-for-perfs/: scaling-perfs.txt
scripts/: README.md  generateParticleTexture.js  pyproject.toml  requirements.txt  watch_downloads.py
src/: App.jsx  index.css  main.jsx  theme.js
src/components/: BackgroundCanvas.jsx  Footer.jsx  Navbar.jsx  PageTransition.jsx  StaggerAnimation.jsx
src/components/Game/: AdvancedCameraController.jsx  CameraIndicators.jsx  ForceGraph.jsx  Graph.jsx  (+6 more)
src/hooks/: useAssets.js  useDebugMode.js
src/pages/: Controls.jsx  Game.jsx  Home.jsx  Work.jsx
src/services/: AssetService.js  README.md
src/utils/: assetLoader.js  logger.js
(+164 files in other folders)
