[tool.poetry]
name = "joshua-exhibition-graph"
version = "0.1.0"
description = "Joshua Exhibition Graph Project"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "3.0.0"
pathlib = "1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 